# dllibrary

./: CMakeLists.txt  README.md
image/: CMakeLists.txt  image.c  image.h  matrix.c  matrix.h  panorama_image.c  panorama_image.h  spatial_filter.c  spatial_filter.h  test.c
include/: dllibrary.h
src/: CMakeLists.txt  batchnorm_layer.c  batchnorm_layer.h  convolutional_layer.c  convolutional_layer.h  layer.c  layer.h
utils/: CMakeLists.txt  blas.h  gemm.c  list.h  utils.h
